force-app/main/default/objects/Input_Scale_Config__mdt/Input_Scale_Config__mdt.object-meta.xml
<CustomObject>
    <label>Input Scale Config</label>
    <pluralLabel>Input Scale Configs</pluralLabel>
</CustomObject>