force-app/main/default/objects/Input_Scale_Config__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display_Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>