force-app/main/default/objects/Input_Scale_Config__mdt/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <label>Input_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Emoji</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>