force-app/main/default/objects/Input_Scale_Config__mdt/fields/Scale_Group__c.field-meta.xml
<CustomField>
    <fullName>Scale_Group__c</fullName>
    <label>Scale_Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>