force-app/main/default/objects/Input_Scale_Config__mdt/fields/Value_Stored__c.field-meta.xml
<CustomField>
    <fullName>Value_Stored__c</fullName>
    <label>Value_Stored</label>
    <length>20</length>
    <type>Text</type>
</CustomField>